added arravil brand

--- a/foodmart.html
+++ b/foodmart.html
@@ -436,7 +436,7 @@
             width: 100%;
             padding-top: .1px;
             margin-top: 50px;
-            border: solid black 1px;
+            /* border: solid black 1px; */
         }
         .s1_innr_boxes{
             height: 90%;
@@ -449,7 +449,7 @@
             padding-top: .1px;
             border-radius: 13px;
             transition: all .2s ease-out;
-            box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.247);
+            box-shadow: 1px 1px 1px 4px rgba(0, 0, 0, 0.068);
 
         }
         .s1_innr_boxes:hover{
@@ -472,6 +472,70 @@
             margin-top: 13px;
             font-size: 20px;
 
+        }
+        .s1_p2{
+            margin-top: 120px;
+            margin-left: 30px;
+            color: rgba(0, 0, 0, 0.63);
+        }
+        .s1_div2{
+            height: 180px;
+            width: 100%;
+            border: solid black 1px;
+            margin-top: 40px;
+        }
+        .s1_ch_div{
+            height: 75%;
+            width: 30%;
+            /* border: solid black 1px; */
+            display: inline-block;
+            vertical-align: top;
+            margin-top: 16px;
+            margin-left: 35px;
+            border-radius: 15px;
+            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.185);
+        }
+        .small_div{
+            height: 90%;
+            width: 30%;
+            /* border: solid black 1px; */
+            border-radius: 12px;
+            margin-top: 5px;
+            margin-left: 10px;
+            overflow: hidden;
+            display: inline-block;
+            vertical-align: top;
+        }
+        #jam{
+            height: 100%;
+            width: 100%;
+        }
+        .jar{
+            display: inline-block;
+            vertical-align: top;
+            margin-left: 10px;
+            margin-top: 20px;
+            font-size: 18px;
+            color: rgba(0, 0, 0, 0.61);
+        }
+        .honey_{
+           display: inline-block;
+           vertical-align: top;
+           margin-top: 50px;
+           margin-left: -85px;
+           font-size: 19px;
+           font-weight: bold;
+           color: rgba(17, 17, 17, 0.801);
+        }
+        .wish{
+            display: inline-block;
+            vertical-align: top;
+            font-size: 16px;
+            margin-top: 80px;
+            margin-left: -210px;
+            font-size: 19px;
+            font-weight: bold;
+             color: rgba(17, 17, 17, 0.801);
         }
     </style>
 </head>
@@ -659,6 +723,33 @@
                     <p class="s1_ptah">juices & Drinks</p>
                 </div>
             </div>
+                <h1 class="s1_p2">Newly Arrived Brands</h1>
+                <div class="s1_div2">
+                    <div class="s1_ch_div">
+                        <div class="small_div">
+                            <img id="jam" src="./images/jam.jpg" alt="">
+                        </div>
+                        <p class="jar">Amber Jar</p>
+                        <p class="honey_">Honey Best nectar you</p>
+                        <p class="wish">you Wish to get</p>
+                    </div>
+                    <div class="s1_ch_div">
+                         <div class="small_div">
+                            <img id="jam" src="./images/23.jpg" alt="">
+                         </div>
+                          <p class="jar">Amber Jar</p>
+                        <p class="honey_">Honey Best nectar you</p>
+                        <p class="wish">you Wish to get</p>
+                    </div>
+                    <div class="s1_ch_div">
+                        <div class="small_div">
+                             <img id="jam" src="./images/24.jpg" alt="">
+                        </div>
+                         <p class="jar">Amber Jar</p>
+                        <p class="honey_">Honey Best nectar you</p>
+                        <p class="wish">you Wish to get</p>
+                    </div>
+                </div>
         </section>
     </main>
 
