--- a/foodmart.html
+++ b/foodmart.html
@@ -919,7 +919,7 @@
             height: 100vh;
             width: 100%;
             padding-top: .1px;
-            border: solid black 1px;
+            /* border: solid black 1px; */
         }
         .s2_div{
             height: 89%;
@@ -1033,12 +1033,104 @@
             color: white;
             font-size: 18px;
             transition: all .2s linear;
-            background-color: rgba(0, 0, 0, 0.356);
+            background-color: rgba(0, 0, 0, 0.541);
         }
         .s2_btn:hover{
             cursor: pointer;
             background-color: rgba(0, 0, 0, 0.26);
             transform: translateY(-5px);
+        }
+        .s3{
+            height: 130vh;
+            width: 100%;
+            border: solid black 1px;
+            padding-top: .1px;
+
+        }
+        .s3_h1{
+            margin-top: 100px;
+            margin-left: 50px;
+        }
+        .s3_div{
+            height: 68%;
+            width: 93%;
+            margin: auto;
+            margin-top: 50px;
+            /* border: solid black 1px; */
+        }
+        .s3_div2{
+            height: 100%;
+            width: 31%;
+            /* border: solid black 1px; */
+            display: inline-block;
+            vertical-align: top;
+            padding-top: .1px;
+            margin-left: 20px;
+            border-radius: 10px;
+            box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.116);
+        }
+        .s3_img_div{
+            height: 45%;
+            width: 90%;
+            /* border: solid black 1px; */
+            margin: auto;
+            margin-top: 20px;
+            border-radius: 10px;
+            background-image: url(./images/bndgobi.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        .s3_s_div{
+            height: 25px;
+            width: 25px;
+            /* border: solid black 1px; */
+            margin-left: 30px;
+            margin-top: 17px;
+            display: inline-block;
+            vertical-align: top;
+        }
+        .s3_pt{
+            display: inline-block;
+            vertical-align: top;
+            margin-top: 18px;
+            font-size: 14px;
+        }
+        .s3_h1_{
+            font-size: 25px;
+            margin-left: 30px;
+            margin-top: 10px;
+        }
+        .s3_pt2{
+            margin-left: 30px;
+            margin-top: 20px;
+            font-size: 17px;
+            width: 80%;
+            color: rgba(0, 0, 0, 0.473);
+        }
+         .s3_img_divv{
+            height: 45%;
+            width: 90%;
+            /* border: solid black 1px; */
+            margin: auto;
+            margin-top: 20px;
+            border-radius: 10px;
+            background-image: url(./images/dry\ fruits.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+         .s3_img_divv_{
+            height: 45%;
+            width: 90%;
+            /* border: solid black 1px; */
+            margin: auto;
+            margin-top: 20px;
+            border-radius: 10px;
+            background-image: url(./images/fruits.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
     </style>
 </head>
@@ -1593,6 +1685,54 @@
                 </div>
             </div>
          </section>
+         <!-- //////////s2////////// -->
+          <section class="s3">
+            <h1 class="s3_h1">Our Recent Blog</h1>
+            <div class="s3_div">
+                <div class="s3_div2">
+                    <div class="s3_img_div"></div>
+                    <div class="s3_s_div">
+                        <i class="fa-regular fa-calendar"></i>
+                    </div>
+                    <p class="s3_pt">22 Aug 2021</p>
+
+                     <div class="s3_s_div" style="margin-left: 15px;">
+                        <i class="fa-regular fa-file"></i>
+                    </div>
+                    <p class="s3_pt">Tips & Tricks</p>
+                    <h1 class="s3_h1_">10 Different Types of comfortable clothes ideas for women</h1>
+                    <p class="s3_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit. Aliquet eleifend viverra enim tincidunt donec quam. A in arcu, hendrerit neque dolor morbi...</p>
+                </div>
+                <div class="s3_div2">
+                     <div class="s3_img_divv"></div>
+                    <div class="s3_s_div">
+                        <i class="fa-regular fa-calendar"></i>
+                    </div>
+                    <p class="s3_pt">22 Aug 2021</p>
+
+                     <div class="s3_s_div" style="margin-left: 15px;">
+                        <i class="fa-regular fa-file"></i>
+                    </div>
+                    <p class="s3_pt">Tips & Tricks</p>
+                    <h1 class="s3_h1_">Latest trends of wearing street wears supremely</h1>
+                   <p class="s3_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit. Aliquet eleifend viverra enim tincidunt donec quam. A in arcu, hendrerit neque dolor morbi...</p>
+                </div>
+                <div class="s3_div2">
+                    <div class="s3_img_divv_"></div>
+                    <div class="s3_s_div">
+                        <i class="fa-regular fa-calendar"></i>
+                    </div>
+                    <p class="s3_pt">22 Aug 2021</p>
+
+                     <div class="s3_s_div" style="margin-left: 15px;">
+                        <i class="fa-regular fa-file"></i>
+                    </div>
+                    <p class="s3_pt">Tips & Tricks</p>
+                    <h1 class="s3_h1_">Top 10 casual look ideas to dress up your kids</h1>
+                   <p class="s3_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit. Aliquet eleifend viverra enim tincidunt donec quam. A in arcu, hendrerit neque dolor morbi...</p>
+                </div>
+            </div>
+          </section>
     </main>
 
 
