--- a/foodmart.html
+++ b/foodmart.html
@@ -1298,6 +1298,50 @@
 
 
         }
+        .s6{
+            height: 25vh;
+            width: 100%;
+            /* border: solid black 1px; */
+        }
+        .s6_div{
+            height: 100%;
+            width: 19%;
+            /* border: solid black 1px; */
+            display: inline-block;
+            vertical-align: top;
+            margin-left: 10px;
+        }
+        .s6_innr_div{
+            height: 25px;
+            width: 25px;
+            margin-top: 5px;
+            margin-left: 5px;
+            display: inline-block;
+            vertical-align: top;
+            /* border: solid black 1px; */
+        }
+        #cart{
+            font-size: 20px;
+            margin-top: 5px;
+        }
+        .s6_pt{
+            display: inline-block;
+            vertical-align: top;
+            margin-top: 7px;
+            margin-left: 5px;
+            font-size: 22px;
+        }
+        .s6_pt2{
+            margin-left: 42px;
+            margin-top: 10px;
+            font-size: 18px;
+            color: rgba(0, 0, 0, 0.432);
+        }
+        .s7{
+            height: 40vh;
+            width: 100%;
+            border: solid black 1px;
+        }
     </style>
 </head>
 
@@ -1954,6 +1998,47 @@
             </div>
         </section>
         <!-- ////////////s5/////// -->
+         <section class="s6">
+            <div class="s6_div">
+                <div class="s6_innr_div">
+                    <i id="cart" class="fa-solid fa-cart-arrow-down"></i>
+                </div>
+                <p class="s6_pt">Free delivery</p>
+                <p class="s6_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+            </div>
+            <div class="s6_div">
+                <div class="s6_innr_div">
+                   <i id="cart" class="fa-solid fa-shield-halved"></i>
+                </div>
+                <p class="s6_pt">100% secure <br> payment</p>
+                <p class="s6_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+            </div>
+            <div class="s6_div">
+                <div class="s6_innr_div">
+                    <i id="cart" class="fa-solid fa-cart-arrow-down"></i>
+                </div>
+                <p class="s6_pt">Quality guarantee</p>
+                <p class="s6_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+            </div>
+            <div class="s6_div">
+                <div class="s6_innr_div">
+                    <i id="cart"  class="fa-solid fa-igloo"></i>
+                </div>
+                <p class="s6_pt">Guaranteed savings</p>
+                <p class="s6_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+            </div>
+            <div class="s6_div">
+                <div class="s6_innr_div">
+                    <i id="cart" class="fa-solid fa-cart-arrow-down"></i>
+                </div>
+                <p class="s6_pt">Daily offers</p>
+                <p class="s6_pt2">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+            </div>
+         </section>
+         <!-- /////////s5///// -->
+          <section class="s7">
+
+          </section>
 
     </main>
 
