--- a/foodmart.html
+++ b/foodmart.html
@@ -1433,6 +1433,32 @@
             cursor: pointer;
             background-color: rgba(0, 0, 0, 0.404);
         }
+        .footer{
+            height: 8vh;
+            width: 100%;
+            padding-top: .1px;
+            /* border: solid black 1px; */
+        }
+        .f_p{
+            margin-top: 10px;
+            margin-left: 15px;
+            font-size: 18px;
+            display: inline-block;
+            vertical-align: top;
+            color: rgba(0, 0, 0, 0.514);
+        }
+        .f_pt{
+            display: inline-block;
+            vertical-align: top;
+            margin-top: 10px;
+            margin-left: 430px;
+            font-size: 17.5px;
+             color: rgba(0, 0, 0, 0.514);
+        }
+        .f_span{
+            color: black;
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -2185,6 +2211,11 @@
                 </div>
             </div>
          </section>
+         <!-- ///////////s7//////// -->
+          <footer class="footer">
+            <p class="f_p">© 2023 Foodmart. All rights reserved.</p>
+            <p class="f_pt">Free HTML Template by <span class="f_span">TemplatesJungle</span>  Distributed by <span class="f_span">ThemeWagon</span> </p>
+          </footer>
 
     </main>
 
